@@ -86,6 +86,38 @@ setMethod("+", c("FLStocks", "a4aFits"), function(e1, e2)
 	e1
 })
 
+#' + methods
+#' @name addition
+#' @description Add residual uncertainty to \code{FLStock} objects.
+#' @param e1 the original \code{FLStocks} object
+#' @param e2 a \code{a4aFitResiduals} object with residuals (suggest to use "deviances").
+#' @details Random normal draws will be added to the log transformed stock.n and catch.n slots using the standard deviation computed from the residuals catch.n and index, for catch.n and stock.n respectively. Returns a \code{FLStock} object.
+#' @rdname addition-methods
+#' @aliases +,FLStocks,a4aFitResiduals-method
+setMethod("+", c("FLStock", "a4aFitResiduals"), function(e1, e2)
+{
+  # if not deviances sd is 1
+  if(e2@desc!="deviances") warning("Residuals are not deviances, in which case sd=1.")
+
+  # number of iterations will come from stock object
+  nit1 <- dims(e1)$iter
+
+  # catch.n variance for harvest, index variance for N
+  sdc <- sqrt(var(e2$catch.n, na.rm=TRUE))
+  sds <- sqrt(var(unlist(e2[-1]), na.rm=TRUE))
+  flq0 <- e2$catch.n
+  flq0[]<- 0
+  sn <- exp(log(stock.n(e1)) + rnorm(nit1, flq0, sds))
+  hrv <- exp(log(harvest(e1)) + rnorm(nit1, flq0, sdc))
+  units(hrv) <- "f"
+  # update object starting from R, NY1 and F so that iterations are consistent
+  e1 <- genFLStock(e1, F=hrv, R=sn[1], ny1=sn[,1])
+
+  # return
+  e1
+})
+
+
 #==================================================================== 
 # "*" methods
 #==================================================================== 
