@@ -5,7 +5,7 @@
 - scas method to run several sca
 - plot for multiple fits
 - new classes for plural fit objects
-
+- addition method for FLStock and fit residuals
 
  BUG FIXES:
 - sca use of covariates fixed
@@ -13,6 +13,8 @@
 - ma simulation from fits fixed
 - window method for a4aSA not windowing the index fixed
 - residuals don't compute aggregated catch anymore, use computeCatchDiagnostics
+- genFLStock now uses ny1 to compute the lower triangle N matrix in the beggining of the time series
+
 
  FLa4a 1.8.x:
 
